Agregacion de Componentes